feat: add route to create a new user
