# src/infrastructure/http/routes/index.ts
@@ -1,9 +1,11 @@
 import { Router } from "express";
-import { shortUrlsRoutes } from "./short-urls.routes";
+import { authRoutes } from "./auth.routes";
 import { redirectRoutes } from "./redirect.routes";
+import { shortUrlsRoutes } from "./short-urls.routes";
 
 const router = Router();
 
+router.use("/auth", authRoutes);
 router.use("/short-urls", shortUrlsRoutes);
 router.use("/", redirectRoutes);
 
