# swagger.json
@@ -60,6 +60,78 @@
 				}
 			}
 		},
+		"/auth": {
+			"post": {
+				"description": "Create a new user",
+				"tags": [
+					"Auth"
+				],
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"username": {
+										"type": "string",
+										"description": "The username of the user",
+										"example": "user123"
+									},
+									"password": {
+										"type": "string",
+										"description": "The password of the user",
+										"example": "password123"
+									}
+								},
+								"required": [
+									"username",
+									"password"
+								]
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "User created successfully",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"id": {
+											"type": "string",
+											"description": "The ID of the user",
+											"format": "uuid"
+										},
+										"username": {
+											"type": "string",
+											"description": "The username of the user",
+											"example": "user123"
+										},
+										"created_at": {
+											"type": "string",
+											"description": "The date and time the user was created",
+											"format": "date-time",
+											"example": "2023-10-01T12:00:00Z"
+										}
+									}
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Invalid input data"
+					},
+					"409": {
+						"description": "Username already exists"
+					},
+					"500": {
+						"description": "Internal server error"
+					}
+				}
+			}
+		},
 		"/short-urls": {
 			"post": {
 				"description": "Create a short URL",
